--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@ body {
   line-height: 1.5;
 }
 
+a, h2, h3, h4 {
+  color: white;
+}
+
+nav a {
+  color: black;
+}
+
 nav,
 footer {
   padding: 2% 0;
@@ -22,6 +30,8 @@ footer {
 }
 
 p{
+  color: white;
+  font-weight: 100;
   padding: 80px;
   line-height: 2;
 }
@@ -47,7 +57,7 @@ section {
 }
 
 section:nth-child(even) {
-  background-color: #1BB5AB;
+  background-color: #11A89E;
 }
 
 img {
