--- a/styles.css
+++ b/styles.css
@@ -5,14 +5,14 @@
 body {
   font-family: "Open Sans", sans-serif; 
   font-size: 20px;
-  background-color:#602C73;
+  background-color:#9A79A6;
   margin: 0px;
   text-align: center;
   line-height: 1.5;
 }
 
 a, h2, h3, h4, h5{
-  color: white;
+  color: black;
 
 }
 
@@ -30,7 +30,7 @@ footer {
 }
 
 p{
-  color: white;
+  color: black;
   font-weight: 100;
   padding: 80px;
   line-height: 2;
@@ -56,8 +56,12 @@ p{
 
 
 header {
+  background-image: url("downtown-harbor.JPG");
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 12% 0;
-  color: white;
+  color: black;
+  border-bottom: solid black 6px;
 }
 
 section {
