--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,6 @@ body {
   line-height: 1.5;
 }
 
-a, h2, h3, h4, h5{
-  color: black;
-
-}
 
  a {
   color: black;
@@ -59,18 +55,23 @@ header {
   background-image: url("downtown-harbor.JPG");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 30%;
-  padding: 12% 0;
+  position: relative;
+  padding-top: 5%;
+  padding-bottom: 20%;
   color: black;
   border-bottom: solid black 6px;
+
 }
 
 #headline {
-  
+  color:white;
+  background-color:rgba(96, 44, 115, 0.39);
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 section {
-  position: static;
   margin: auto;
   width: 70%;
 }
