--- a/styles.css
+++ b/styles.css
@@ -12,17 +12,21 @@ body {
 }
 
 
- a {
-  color: black;
-}
-
 footer {
   padding: 2% 0;
   background-color:#8B5D9C;
 }
 
-.button-outline{
- padding: 10px;
+li {
+  padding: 10px;
+}
+
+.links{
+  padding: 10px;
+  color: black;
+  text-decoration: none;
+  border: black 2px solid;
+  background-color: #7C6B82;
 }
 
 p{
@@ -56,7 +60,7 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  padding-top: 5%;
+  padding-top: 2%;
   padding-bottom: 20%;
   color: black;
   border-bottom: solid black 6px;
@@ -74,19 +78,19 @@ header {
 section {
   margin: auto;
   width: 70%;
+  border: solid 5px;
 }
 
 /*doesn't float */
 #bio {
   display: block;
-  float: right;
 }
 
 #me {
   transform: rotate(-90deg);
+  float: left;
+  height: auto;
 }
-
-
 
 img {
   display: block;
