--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,20 @@ body {
   line-height: 1.5;
 }
 
-h1, h2 {
+#wix {
+  text-decoration: none;
+}
+
+#wix:hover {
+  color: #602C73 ;
+}
+
+h1, h2, #wix {
   color: ivory;
   font-family: 'Ovo', serif;
 }
 
-h2, h3, h4, h5 {
+h3, h4, h5 {
   color: ivory;
   font-family: 'Muli', sans-serif;
 }
