update file structure

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ p{
 
 
 header {
-  background-image: url("downtown-harbor.JPG");
+  background-image: url("./pictures/downtown-harbor.JPG");
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
