--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,67 @@ body {
   line-height: 1.5;
 }
 
+main {
+  background-image: url("./pictures/downtown-harbor.JPG");
+  background-repeat: no-repeat;
+  position: absolute;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  color: black;
+}
+
+#headline {
+  color: #5C164E;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.nav-bar {
+  width: 100%;
+  height: 50px;
+  padding: 5px;
+  position: static;
+  overflow: auto;
+  display: block;
+  list-style: none;
+  background-color: #00635D;
+  border-bottom: solid thin #000501;
+}
+
+.nav-link {
+  float: left;
+  height: auto;
+  border-radius: 5px;
+  padding-top: 5px;
+  margin: 5px;
+  color: #B8C4BB;
+}
+
+.nav-link:hover {
+  background-color: #5C164E;
+  border-radius: 5px;
+  height: auto;
+  padding: 4px;
+}
+
+a {
+  color: #5C164E;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 #wix {
   text-decoration: none;
+  color: #5C164E;
 }
 
 #wix:hover {
-  color: #602C73 ;
+  color: #00635D ;
 }
 
 h1, h2, #wix {
-  color: ivory;
   font-family: 'Ovo', serif;
 }
 
@@ -33,7 +84,6 @@ h5 {
   color: #9A79A6;
 }
 
-
 footer {
   padding: 2% 0;
   background-color:#8B5D9C;
@@ -43,58 +93,11 @@ li {
   padding: 10px;
 }
 
-.links{
-  padding: 5px;
-  color: ivory;
-  text-decoration: none;
-  border: black 2px solid;
-  background-color: black;
-}
-
-p{
+p {
   font-family: 'Muli', sans-serif;
   color: ivory;
   font-weight: 100;
   line-height: 2;
-}
-
-
-
-.nav-bar {
-  width: 100%;
-  position: static;
-  overflow: auto;
-  display: block;
-  list-style: none;
-  background-color: #8B5D9C;
-  border-bottom: solid black 2px;
-}
-
-#menu{
-  display: flex;
-  list-style: none;
-  float: left;
-}
-
-
-header {
-  background-image: url("./pictures/downtown-harbor.JPG");
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  padding-top: 2%;
-  padding-bottom: 20%;
-  color: black;
-  border-bottom: solid black 2px;
-}
-
-#headline {
-  color:ivory;
-  background-color:rgba(96, 44, 115, 0.39);
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-  border: solid black 2px
 }
 
 section {
