--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
 
 #nav-bar {
   width: 100%;
-  height: 50px;
+  height: 60px;
   list-style: none;
   background-color: #00635D;
 }
@@ -68,6 +68,22 @@ body {
   border-radius: 5px;
   height: auto;
   padding: 4px;
+}
+
+#nav-icons .fa {
+  float: right;
+  color: #B8C4BB;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  margin: 5px;
+  /* color: #5C164E; */
+}
+
+#nav-icons .fa:hover {
+  background-color: #5C164E;
+  margin: 5px;
+  border-radius: 5px;
 }
 
 a {
@@ -136,6 +152,12 @@ p {
   flex-direction: column;
 }
 
+#contact {
+  position: relative;
+  top: 900px;
+  margin-bottom: 10%;
+}
+
 .img-and-tech {
   display: flex;
   flex-direction: row;
@@ -172,10 +194,12 @@ p {
   text-align: center;
   font-size: 30px;
   padding: 30px;
-  color: #9A79A6;
+  color: #5C164E;
 }
 
 footer {
-  padding: 2% 0;
+  position: relative;
   background-color:#8B5D9C;
+  margin-top: 940px;
+  height: auto;
 }
