--- a/docs/styles.css
+++ b/docs/styles.css
@@ -36,7 +36,7 @@ body {
 
 #bio {
   position: relative;
-  top: 800px;
+  top: 100vh;
 }
 
 
@@ -147,15 +147,15 @@ p {
 
 #projects {
   position: relative;
-  top: 880px;
+  top: 100vh;
   display: flex;
   flex-direction: column;
 }
 
 #contact {
   position: relative;
-  top: 900px;
-  margin-bottom: 10%;
+  top: 100vh;
+  margin-bottom: 2em;
 }
 
 .img-and-tech {
@@ -200,6 +200,8 @@ p {
 footer {
   position: relative;
   background-color:#8B5D9C;
-  margin-top: 940px;
+  font-size: small;
+  top: 100vh;
+  /* margin-top: 940px; */
   height: auto;
 }
