--- a/docs/styles.css
+++ b/docs/styles.css
@@ -20,6 +20,28 @@ body {
   height: 100%;
   color: black;
   top: 50px;
+  z-index: -1;
+}
+
+#bio {
+  position: relative;
+  top: 110vh;
+  padding-top: 4%;
+}
+
+#projects {
+  position: relative;
+  top: 110vh;
+  display: flex;
+  flex-direction: column;
+  padding-top: 4%;
+}
+
+#contact {
+  position: relative;
+  top: 110vh;
+  margin-bottom: 2em;
+  padding-top: 4%;
 }
 
 @media only screen and (max-width: 400px) {
@@ -31,13 +53,9 @@ body {
   #nav-bar {
     min-width: 400;
   }
- 
 }
 
-#bio {
-  position: relative;
-  top: 100vh;
-}
+
 
 
 #headline {
@@ -48,10 +66,19 @@ body {
 }
 
 #nav-bar {
+  position: fixed;
+  top: 0px;
+  z-index: 2;
   width: 100%;
-  height: 60px;
+  height: 50px;
   list-style: none;
   background-color: #00635D;
+  box-shadow: -5px 5px 10px black;
+  animation-name: slide;
+  animation-duration: 1s;
+}
+@keyframes slide {
+  0% {height: 0px}
 }
 
 .nav-link {
@@ -143,19 +170,6 @@ p {
   margin: auto;
   border-radius: 20px;
   float: right;
-}
-
-#projects {
-  position: relative;
-  top: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-#contact {
-  position: relative;
-  top: 100vh;
-  margin-bottom: 2em;
 }
 
 .img-and-tech {
