--- a/docs/styles.css
+++ b/docs/styles.css
@@ -28,11 +28,11 @@ body {
   border-radius: 5px;
   padding-top: 5px;
   margin: 5px;
-  color: #23F0C7;
+  color: #FFFAF0;
 }
 
 .nav-link:hover {
-  background-color: #B388EB;
+  background-color: #FABC2A;
   border-radius: 5px;
   height: auto;
   padding: 4px;
@@ -40,7 +40,7 @@ body {
 
 #nav-icons .fa {
   float: right;
-  color: #B8C4BB;
+  color: #FFFAF0;
   text-align: center;
   font-size: 20px;
   padding: 10px;
@@ -97,8 +97,8 @@ body {
 }
 
 #smiley {
-  width: auto;
-  border-radius: 20px;
+  max-width: 200px;
+  border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -198,11 +198,12 @@ h3, h4, h5 {
 
 footer {
   position: relative;
-  background-color: #8B5D9C;
+  background-color: #4C1E4F;
   font-size: small;
-  top: 100vh;
-  /* margin-top: 940px; */
-  height: auto;
+  top: 110vh;
+  height: 40px;
+  padding-top: 10px;
+  color: #FFFAF0;
 }
 
 /*# sourceMappingURL=styles.css.map */
