--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -9,7 +9,6 @@ $sub-font: 'Muli', sans-serif;
 $main-font: 'Ovo', serif; 
 
 
-
 * {
   box-sizing: border-box;
 }
@@ -30,6 +29,7 @@ body {
   height: 55px;
   list-style: none;
   background-color: $dark-purple;
+
   box-shadow: 50px, -10px, black;
   z-index: 1;
 }
@@ -40,10 +40,10 @@ body {
   border-radius: 5px;
   padding-top: 5px;
   margin: 5px;
-  color: $teal;
+  color: $off-white;
 }
 .nav-link:hover {
-  background-color: $lavender;
+  background-color: $yellow;
   border-radius: 5px;
   height: auto;
   padding: 4px;
@@ -51,7 +51,7 @@ body {
 
 #nav-icons .fa {
   float: right;
-  color: #B8C4BB;
+  color: $off-white;
   text-align: center;
   font-size: 20px;
   padding: 10px;
@@ -110,8 +110,8 @@ body {
 }
 
 #smiley {
-  width: auto;
-  border-radius: 20px;
+  max-width: 200px;
+  border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -215,9 +215,10 @@ h3, h4, h5 {
 
 footer {
   position: relative;
-  background-color:#8B5D9C;
+  background-color: $dark-purple;
   font-size: small;
-  top: 100vh;
-  /* margin-top: 940px; */
-  height: auto;
+  top: 110vh;
+  height: 40px;
+  padding-top: 10px;
+  color: $off-white;
 }
