--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -28,9 +28,8 @@ body {
   width: 100%;
   height: 55px;
   list-style: none;
-  background-color: $dark-purple;
-
-  box-shadow: 50px, -10px, black;
+  background-color: $teal;
+  box-shadow: 2px 2px 20px #474747;
   z-index: 1;
 }
 
@@ -40,7 +39,7 @@ body {
   border-radius: 5px;
   padding-top: 5px;
   margin: 5px;
-  color: $off-white;
+  color: $dark-purple;
 }
 .nav-link:hover {
   background-color: $yellow;
@@ -51,16 +50,15 @@ body {
 
 #nav-icons .fa {
   float: right;
-  color: $off-white;
+  color: $dark-purple;
   text-align: center;
   font-size: 20px;
   padding: 10px;
   margin: 5px;
-  /* color: #5C164E; */
 }
 
 #nav-icons .fa:hover {
-  background-color: #5C164E;
+  background-color: $yellow;
   margin: 5px;
   border-radius: 5px;
 }
