--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -15,7 +15,7 @@ $main-font: 'Ovo', serif;
 
 body {
   font-family: $sub-font; 
-  font-size: 18px;
+  font-size: 20px;
   background-color: $off-white;
   margin: 0px;
   text-align: center;
@@ -134,8 +134,6 @@ body {
 }
 
 #container {
-  // margin-left: auto;
-  // margin-right: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -166,10 +164,9 @@ body {
 
 .project img {
   float: left;
-  padding-left: 5%;
-  padding-right: 5%;
   max-width:100%;
   height: auto;
+  padding-bottom: 10px;
 }
 
 .techstack {
@@ -180,13 +177,17 @@ body {
 .project-buttons {
   padding: 5px;
   margin: 5px;
+
+  a {
+    color: $dark-purple;
+  }
   
-   a:hover {
-    color: #B8C4BB;
-    background-color: #00635D;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 5px;
+  a:hover {
+  color: $dark-purple;
+  background-color: $yellow;
+  border-radius: 5px;
+  padding: 5px;
+  margin: 5px;
   }
 }
 
