--- a/docs/styles.css
+++ b/docs/styles.css
@@ -124,14 +124,14 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 .project {
-  margin: 1%;
+  margin: 20px;
   border-radius: 10px;
   border: solid black;
-  width: 300px;
+  width: 350px;
   height: auto;
 }
 
