--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,11 @@
-$dark-purple: #4C1E4F;
-$lavender: #B388EB;
-$red: #ED6A5A;
-$yellow: #FABC2A;
-$teal: #23F0C7;
-$off-white: #FFFAF0;
-
-$sub-font: 'Ovo', serif;
-$main-font: 'Muli', sans-serif; 
-
-
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: $sub-font; 
+  font-family: "Ovo", serif;
   font-size: 20px;
-  background-color: $off-white;
+  background-color: #FFFAF0;
   margin: 0px;
   text-align: center;
   line-height: 1.5;
@@ -28,7 +17,7 @@ body {
   width: 100%;
   height: 45px;
   list-style: none;
-  background-color: $teal;
+  background-color: #23F0C7;
   box-shadow: 2px 2px 20px #474747;
   z-index: 1;
 }
@@ -39,10 +28,11 @@ body {
   border-radius: 5px;
   padding: 5px;
   margin: 5px;
-  color: $dark-purple;
+  color: #4C1E4F;
 }
+
 .nav-link:hover {
-  background-color: $yellow;
+  background-color: #FABC2A;
   border-radius: 5px;
   height: auto;
   padding: 4px;
@@ -50,7 +40,7 @@ body {
 
 #nav-icons .fa {
   float: right;
-  color: $dark-purple;
+  color: #4C1E4F;
   text-align: center;
   font-size: 20px;
   padding: 10px;
@@ -58,60 +48,45 @@ body {
 }
 
 #nav-icons .fa:hover {
-  background-color: $yellow;
+  background-color: #FABC2A;
   border-radius: 5px;
   height: auto;
   padding: 4px;
 }
 
 #hero {
+  background-color: #FABC2A;
   position: absolute;
-  background-color: $yellow;
-  //background-image: url("pictures/downtown-harbor.JPG");
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   color: black;
   top: 45px;
   z-index: -1;
 }
 
-@media only screen and (max-width: 502px) {
-  #nav-bar a {
-    font-size: 15px;
-  } 
- 
-  #nav-bar .fa {
-    font-size: 15px;
-  } 
+@media only screen and (max-width: 400px) {
+  #hero {
+    width: 400px;
+  }
 
+  #nav-bar {
+    min-width: 400;
+  }
 }
-
 #headline {
-  color: $dark-purple;
+  color: #4C1E4F;
   width: 70%;
   position: relative;
-  top: 70%;
   margin-left: auto;
   margin-right: auto;
-  
-  // @media screen and (max-width: 581px) {
-
-  //   #headline {
-  //     margin: 0;
-  //   }
-  //   h1 {
-  //     font-size: 1em;
-  //   }
-  // }
-
-  h1 {
-    font-size: 3em;
-    line-height: .3em;
-  }
-  h2 {
-    font-size: 1em;
-  }
+}
+#headline h1 {
+  font-size: 3em;
+  line-height: 0.3em;
+}
+#headline h2 {
+  font-size: 1em;
 }
 
 #bio {
@@ -121,15 +96,13 @@ body {
   margin: 30px;
   padding-top: 20px;
   border-radius: 10px;
-
-
-  p {
-    width: 60%;
-    padding: 10px;
-    font-size: 12;
-    margin-left: auto;
-    margin-right: auto;
-  }
+}
+#bio p {
+  width: 60%;
+  padding: 10px;
+  font-size: 12;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #smiley {
@@ -150,74 +123,42 @@ body {
   position: relative;
   background: #b388eb6b;
   padding-top: 20px;
-  top: 110vh; 
+  top: 110vh;
   margin: 30px;
   border-radius: 10px;
 }
 
 .project {
-  border-bottom: solid $dark-purple 4px;
-  border-radius: 10px;
-  width: 100%;
+  width: 100vw;
   margin: 0px;
-  padding: 10px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-
-  a {
-    color: $dark-purple;
-    width: 40%;
-    padding: 20px;
-    margin: 5px;
-    border: solid 2px $dark-purple;
-    border-radius: 10px;
-  }
-
-  a:hover {
-    background-color: $teal;
-    border: groove;
-  }
-
-  img {
-    width: 50%;
-  }
-
-  .info {
-    width: 50%;
-  }
-}
-
-.project:nth-child(odd) {
-  display: flex;
-  flex-direction: row-reverse;
 }
 
 .project-buttons {
-  // position: relative;
   padding: 5px;
   margin: 5px;
   height: auto;
-
-  a {
-    top: -5px;
-    color: $dark-purple;
-  }
+}
+.project-buttons a {
+  top: -5px;
+  color: #4C1E4F;
 }
 
+.img-and-tech {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+}
 
-// .project img {
-//   float: left;
-//   max-width:100%;
-//   height: auto;
-//   padding-bottom: 10px;
-// }
+.img-and-tech {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap-reverse;
+}
 
 .techstack {
   margin-left: auto;
   margin-right: auto;
 }
-
 
 #contact {
   position: relative;
@@ -233,20 +174,20 @@ a {
 }
 
 p {
-  font-family: $sub-font;
-  color:$dark-purple;
+  font-family: "Ovo", serif;
+  color: #4C1E4F;
   font-weight: bolder;
   font-size: 20px;
   line-height: 2;
 }
 
-h1, h2{
-  font-family: $main-font;
-  color: $dark-purple;
+h1, h2 {
+  font-family: "Muli", sans-serif;
+  color: #4C1E4F;
 }
 
 h3, h4, h5 {
-  font-family: $sub-font;
+  font-family: "Ovo", serif;
 }
 
 .section-content {
@@ -255,7 +196,7 @@ h3, h4, h5 {
   flex-wrap: wrap;
 }
 
-.fa{
+.fa {
   text-align: center;
   font-size: 30px;
   padding: 30px;
@@ -264,11 +205,13 @@ h3, h4, h5 {
 
 footer {
   position: relative;
-  background-color: $dark-purple;
+  background-color: #4C1E4F;
   font-size: small;
   top: 110vh;
   height: 40px;
   padding-top: 10px;
-  color: $off-white;
+  color: #FFFAF0;
   box-shadow: 2px -2px 10px #474747;
 }
+
+/*# sourceMappingURL=styles.css.map */
