--- a/docs/styles.css
+++ b/docs/styles.css
@@ -11,6 +11,15 @@ body {
   line-height: 1.5;
 }
 
+h1, h2 {
+  font-family: "Muli", sans-serif;
+  color: #4C1E4F;
+}
+
+h3, h4, h5 {
+  font-family: "Ovo", serif;
+}
+
 #nav-bar {
   position: fixed;
   top: 0;
@@ -56,6 +65,9 @@ body {
 
 #hero {
   position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   background-color: #FABC2A;
   background-size: cover;
   width: 100vw;
@@ -66,19 +78,38 @@ body {
 }
 
 @media only screen and (max-width: 502px) {
-  #nav-bar a {
-    font-size: 15px;
+  #nav-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
 
-  #nav-bar .fa {
-    font-size: 15px;
+  .nav-link {
+    float: none;
+  }
+
+  #nav-bar a {
+    font-size: 18px;
+  }
+
+  #nav-icons {
+    display: none;
   }
 }
+#cutout {
+  position: absolute;
+  bottom: 0;
+  margin-top: 10%;
+  width: 50%;
+  height: auto;
+}
+
 #headline {
   color: #4C1E4F;
-  width: 70%;
-  position: relative;
-  top: 70%;
+  width: 50%;
+  position: absolute;
+  top: 15%;
+  right: 5%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -87,9 +118,16 @@ body {
   line-height: 0.3em;
 }
 #headline h2 {
-  font-size: 1em;
+  font-size: 1.5em;
 }
 
+@media only screen and (max-width: 1097px) {
+  #headline {
+    top: 10%;
+    width: 100%;
+    right: 0;
+  }
+}
 #bio {
   position: relative;
   top: 110vh;
@@ -130,10 +168,10 @@ body {
 }
 
 .project {
-  border-bottom: solid #4C1E4F 4px;
+  border: solid #4C1E4F 2px;
   border-radius: 10px;
   width: 100%;
-  margin: 0px;
+  margin-bottom: 10px;
   padding: 10px;
   display: flex;
   flex-direction: row;
@@ -141,15 +179,13 @@ body {
 }
 .project a {
   color: #4C1E4F;
-  width: 40%;
-  padding: 20px;
+  padding: 10px;
   margin: 5px;
   border: solid 2px #4C1E4F;
   border-radius: 10px;
 }
 .project a:hover {
   background-color: #23F0C7;
-  border: groove;
 }
 .project img {
   width: 50%;
@@ -158,26 +194,23 @@ body {
   width: 50%;
 }
 
+.links {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
 .project:nth-child(odd) {
   display: flex;
   flex-direction: row-reverse;
 }
 
-.project-buttons {
-  padding: 5px;
-  margin: 5px;
-  height: auto;
+@media only screen and (max-width: 600px) {
+  .project, .project:nth-child(odd) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
-.project-buttons a {
-  top: -5px;
-  color: #4C1E4F;
-}
-
-.techstack {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 #contact {
   position: relative;
   top: 110vh;
@@ -197,15 +230,6 @@ p {
   font-weight: bolder;
   font-size: 20px;
   line-height: 2;
-}
-
-h1, h2 {
-  font-family: "Muli", sans-serif;
-  color: #4C1E4F;
-}
-
-h3, h4, h5 {
-  font-family: "Ovo", serif;
 }
 
 .section-content {
