--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -22,6 +22,15 @@ body {
   line-height: 1.5;
 }
 
+h1, h2{
+  font-family: $main-font;
+  color: $dark-purple;
+}
+
+h3, h4, h5 {
+  font-family: $sub-font;
+}
+
 #nav-bar {
   position: fixed;
   top: 0;
@@ -66,6 +75,9 @@ body {
 
 #hero {
   position: absolute;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   background-color: $yellow;
   //background-image: url("pictures/downtown-harbor.JPG");
   background-size: cover;
@@ -77,40 +89,57 @@ body {
 }
 
 @media only screen and (max-width: 502px) {
+  #nav-bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .nav-link {
+    float: none;
+  }
   #nav-bar a {
-    font-size: 15px;
+    font-size: 18px;
   } 
  
-  #nav-bar .fa {
-    font-size: 15px;
+  #nav-icons {
+    display: none;
   } 
+}
 
+//****at VW 813 and below, make image burst into confetti 
+//****and headline takes up full width of page
+
+#cutout {
+  position: absolute;
+  bottom: 0;
+  margin-top: 10%;
+  width: 50%;
+  height: auto;
 }
 
 #headline {
   color: $dark-purple;
-  width: 70%;
-  position: relative;
-  top: 70%;
+  width: 50%;
+  position: absolute;
+  top: 15%;
+  right: 5%;
   margin-left: auto;
   margin-right: auto;
-  
-  // @media screen and (max-width: 581px) {
-
-  //   #headline {
-  //     margin: 0;
-  //   }
-  //   h1 {
-  //     font-size: 1em;
-  //   }
-  // }
 
   h1 {
     font-size: 3em;
     line-height: .3em;
   }
   h2 {
-    font-size: 1em;
+    font-size: 1.5em;
+  }
+}
+
+@media only screen and (max-width: 1097px) {
+  #headline {
+    top: 10%;
+    width: 100%;
+    right: 0;
   }
 }
 
@@ -156,10 +185,10 @@ body {
 }
 
 .project {
-  border-bottom: solid $dark-purple 4px;
+  border: solid $dark-purple 2px;
   border-radius: 10px;
   width: 100%;
-  margin: 0px;
+  margin-bottom: 10px;
   padding: 10px;
   display: flex;
   flex-direction: row;
@@ -167,8 +196,7 @@ body {
 
   a {
     color: $dark-purple;
-    width: 40%;
-    padding: 20px;
+    padding: 10px;
     margin: 5px;
     border: solid 2px $dark-purple;
     border-radius: 10px;
@@ -176,7 +204,6 @@ body {
 
   a:hover {
     background-color: $teal;
-    border: groove;
   }
 
   img {
@@ -188,36 +215,23 @@ body {
   }
 }
 
+.links {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
 .project:nth-child(odd) {
   display: flex;
   flex-direction: row-reverse;
 }
 
-.project-buttons {
-  // position: relative;
-  padding: 5px;
-  margin: 5px;
-  height: auto;
-
-  a {
-    top: -5px;
-    color: $dark-purple;
+@media only screen and (max-width: 600px) {
+  .project, .project:nth-child(odd) {
+    flex-direction: column;
+    align-items: center;
   }
 }
-
-
-// .project img {
-//   float: left;
-//   max-width:100%;
-//   height: auto;
-//   padding-bottom: 10px;
-// }
-
-.techstack {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 
 #contact {
   position: relative;
@@ -238,15 +252,6 @@ p {
   font-weight: bolder;
   font-size: 20px;
   line-height: 2;
-}
-
-h1, h2{
-  font-family: $main-font;
-  color: $dark-purple;
-}
-
-h3, h4, h5 {
-  font-family: $sub-font;
 }
 
 .section-content {
