--- a/docs/styles.css
+++ b/docs/styles.css
@@ -18,6 +18,7 @@ h1, h2 {
 
 h3, h4, h5 {
   font-family: "Ovo", serif;
+  color: #4C1E4F;
 }
 
 #nav-bar {
@@ -112,10 +113,11 @@ h3, h4, h5 {
   right: 5%;
   margin-left: auto;
   margin-right: auto;
+  padding: 10px;
 }
 #headline h1 {
   font-size: 3em;
-  line-height: 0.3em;
+  line-height: 0.8em;
 }
 #headline h2 {
   font-size: 1.5em;
@@ -130,18 +132,16 @@ h3, h4, h5 {
 }
 #bio {
   position: relative;
-  top: 110vh;
+  top: 108vh;
   background: #b388eb6b;
   margin: 30px;
-  padding-top: 20px;
   border-radius: 10px;
+  box-shadow: -2px 2px 10px #474747;
 }
-#bio p {
-  width: 60%;
+#bio h3 {
+  font-size: 3vw;
+  margin: 0px;
   padding: 10px;
-  font-size: 12;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 #smiley {
@@ -165,17 +165,20 @@ h3, h4, h5 {
   top: 110vh;
   margin: 30px;
   border-radius: 10px;
+  box-shadow: -2px 2px 10px #474747;
 }
 
 .project {
-  border: solid #4C1E4F 2px;
-  border-radius: 10px;
   width: 100%;
   margin-bottom: 10px;
   padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+}
+.project h2 {
+  margin: 0;
+  width: auto;
 }
 .project a {
   color: #4C1E4F;
@@ -189,9 +192,14 @@ h3, h4, h5 {
 }
 .project img {
   width: 50%;
+  border: solid 2px black;
+  border-radius: 10px;
 }
 .project .info {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-self: center;
 }
 
 .links {
@@ -212,11 +220,25 @@ h3, h4, h5 {
   }
 }
 #contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
-  top: 110vh;
-  padding-top: 200px;
+  top: 115vh;
   height: 100vh;
   margin-bottom: 2em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#contact-icons {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
 }
 
 a {
@@ -228,19 +250,13 @@ p {
   font-family: "Ovo", serif;
   color: #4C1E4F;
   font-weight: bolder;
-  font-size: 20px;
-  line-height: 2;
-}
-
-.section-content {
-  width: fit-content;
-  display: flex;
-  flex-wrap: wrap;
+  font-size: 2.5vw;
+  line-height: auto;
 }
 
 .fa {
   text-align: center;
-  font-size: 30px;
+  font-size: 2em;
   padding: 30px;
   color: #5C164E;
 }
