--- a/docs/styles.css
+++ b/docs/styles.css
@@ -114,11 +114,11 @@ h3, h4, h5 {
   margin-right: auto;
 }
 #headline h1 {
-  font-size: 3em;
-  line-height: 0.3em;
+  font-size: 5vw;
+  line-height: 0.5em;
 }
 #headline h2 {
-  font-size: 1.5em;
+  font-size: 2.5vw;
 }
 
 @media only screen and (max-width: 1097px) {
