--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -136,11 +136,21 @@ h3, h4, h5 {
   }
 }
 
-@media only screen and (max-width: 1097px) {
+@media only screen and (max-width: 1090px) {
   #headline {
     top: 10%;
-    width: 100%;
-    right: 0;
+    width: 90%;
+    
+    h1 {
+      font-size: 8vw;
+      line-height: 0;
+    }
+
+    h2 {
+      font-size: 4vw;
+      position: relative;
+      line-height: 0;
+    }
   }
 }
 
