--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -29,6 +29,7 @@ h1, h2{
 
 h3, h4, h5 {
   font-family: $sub-font;
+  color: $dark-purple;
 }
 
 #nav-bar {
@@ -136,14 +137,14 @@ h3, h4, h5 {
   }
 }
 
-@media only screen and (max-width: 1090px) {
+@media only screen and (max-width: 1041px) {
   #headline {
     top: 10%;
     width: 90%;
     
     h1 {
       font-size: 8vw;
-      line-height: 0;
+      line-height: 0.5;
     }
 
     h2 {
@@ -159,17 +160,10 @@ h3, h4, h5 {
   top: 110vh;
   background: #b388eb6b;
   margin: 30px;
-  padding-top: 20px;
+  padding: 20px;
   border-radius: 10px;
-
-
-  p {
-    width: 60%;
-    padding: 10px;
-    font-size: 12;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  font-size: 2vw;
+  box-shadow: -2px 2px 10px #474747;
 }
 
 #smiley {
@@ -193,10 +187,10 @@ h3, h4, h5 {
   top: 110vh; 
   margin: 30px;
   border-radius: 10px;
+  box-shadow: -2px 2px 10px #474747;
 }
 
 .project {
-  border: solid $dark-purple 2px;
   border-radius: 10px;
   width: 100%;
   margin-bottom: 10px;
@@ -205,12 +199,23 @@ h3, h4, h5 {
   flex-direction: row;
   justify-content: space-around;
 
+  h1 {
+    font-size: 5vw;
+  }
+
+  h2 {
+    line-height: 0;
+    font-size: 3.5vw;
+  }
+
   a {
     color: $dark-purple;
+    font-size: 3vw;
+    width: 40%;
     padding: 10px;
     margin: 5px;
     border: solid 2px $dark-purple;
-    border-radius: 10px;
+    border-radius: 5px;
   }
 
   a:hover {
@@ -219,6 +224,8 @@ h3, h4, h5 {
 
   img {
     width: 50%;
+    border: solid $dark-purple 2px;
+    border-radius: 10px;
   }
 
   .info {
@@ -245,6 +252,9 @@ h3, h4, h5 {
 }
 
 #contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   position: relative;
   top: 110vh;
   padding-top: 200px;
@@ -257,11 +267,21 @@ a {
   font-weight: bold;
 }
 
+#contact-items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+
 p {
   font-family: $sub-font;
   color:$dark-purple;
   font-weight: bolder;
-  font-size: 20px;
+  font-size: 2.5vw;
   line-height: 2;
 }
 
@@ -273,7 +293,7 @@ p {
 
 .fa{
   text-align: center;
-  font-size: 30px;
+  font-size: 40px;
   padding: 30px;
   color: #5C164E;
 }
