--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -164,16 +164,18 @@ h3, h4, h5 {
 }
 
 #bio {
+  display: flex;
+  align-items: center;
   position: relative;
+  height: 40vh;
   top: 108vh;
-  // display: flex;
-  // align-items: center;
   background: #b388eb6b;
   margin: 30px;
   padding: 20px;
   border-radius: 10px;
   font-size: 2vw;
   box-shadow: -2px 2px 10px #474747;
+  
 }
 
 #smiley {
@@ -269,7 +271,7 @@ h1 {
   flex-direction: column;
   justify-content: center;
   position: relative;
-  top: 115vh;
+  top: 113vh;
   height: 100vh;
   margin-bottom: 2em;
   margin-left: auto;
