--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -81,7 +81,6 @@ h3, h4, h5 {
   flex-direction: row;
   align-items: center;
   background-color: $yellow;
-  
   background-size: cover;
   width: 100vw;
   height: 100vh;
@@ -157,11 +156,9 @@ h3, h4, h5 {
   }
 }
 
-@media only screen and (max-width: 750px) {
-  #cutout {
-    width: 80vw;
-  }
-}
+// @media only screen and (max-width: 750px) {
+//   
+// }
 
 #bio {
   display: flex;
@@ -209,7 +206,7 @@ h1 {
 .project {
   border-radius: 10px;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   padding: 10px;
   display: flex;
   flex-direction: row;
@@ -263,6 +260,14 @@ h1 {
   .project, .project:nth-child(odd) {
     flex-direction: column;
     align-items: center;
+  }
+
+  // #hero {
+  //   height: 80vh;
+  // }
+
+  #cutout {
+    width: 90vw;
   }
 }
 
