--- a/docs/styles.css
+++ b/docs/styles.css
@@ -100,9 +100,7 @@ h3, h4, h5 {
 #cutout {
   position: absolute;
   bottom: 0;
-  margin-top: 10%;
   width: 50%;
-  height: auto;
 }
 
 #headline {
@@ -137,6 +135,10 @@ h3, h4, h5 {
     position: relative;
     line-height: 0;
   }
+
+  #hero {
+    height: 90vh;
+  }
 }
 #bio {
   display: flex;
@@ -157,13 +159,6 @@ h3, h4, h5 {
   border-radius: 50%;
   margin-left: auto;
   margin-right: auto;
-}
-
-#me {
-  width: auto;
-  margin: auto;
-  border-radius: 20px;
-  float: right;
 }
 
 #projects {
@@ -235,7 +230,7 @@ h1 {
   }
 
   #cutout {
-    width: 90vw;
+    width: 80%;
   }
 }
 #contact {
