--- a/docs/styles.scss
+++ b/docs/styles.scss
@@ -89,6 +89,15 @@ h3, h4, h5 {
   z-index: -1;
 }
 
+.dot {
+  position: absolute;
+  border-radius: 50%;
+  background-color: $red;
+  width: 1vw;
+  height: 1vw;
+  z-index: 1;
+}
+
 @media only screen and (max-width: 502px) {
   #nav-bar {
     display: flex;
